--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Classic Cuts - Agendamento Online</title>
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <!-- Flatpickr (Calendário) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <!-- Nosso CSS Customizado -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-gray-900 text-white">
 
+    <!-- Header (Fixo em todas as páginas) -->
     <header class="bg-gray-800 shadow-lg sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="#" class="text-2xl font-brand text-amber-400" data-page="home">Classic Cuts</a>
@@ -21,12 +27,14 @@
                 <a href="#" id="admin-nav-link" class="nav-link hover:text-amber-400 hidden" data-page="admin">Painel</a>
                 <a href="#" id="logout-nav-link" class="hover:text-red-500 hidden">Sair</a>
             </div>
+            <!-- Mobile Menu Button -->
             <div class="md:hidden">
                 <button id="mobile-menu-button" class="text-white focus:outline-none">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
                 </button>
             </div>
         </nav>
+        <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-gray-800">
             <a href="#" class="nav-link-mobile block py-2 px-4 text-sm hover:bg-gray-700" data-page="home">Home</a>
             <a href="#" class="nav-link-mobile block py-2 px-4 text-sm hover:bg-gray-700" data-page="barbers">Barbeiros</a>
@@ -37,9 +45,12 @@
         </div>
     </header>
 
+    <!-- Onde o conteúdo das páginas será carregado -->
     <main id="app-content" class="container mx-auto px-6 py-8">
-        </main>
+        <!-- O JS vai injetar o conteúdo de home.html, barbers.html, etc. aqui -->
+    </main>
 
+    <!-- Modal (Fixo em todas as páginas) -->
     <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
         <div class="bg-gray-800 rounded-lg p-8 max-w-sm mx-auto">
             <h3 id="modal-title" class="text-2xl font-bold mb-4"></h3>
@@ -48,6 +59,13 @@
         </div>
     </div>
 
+    <!-- Bibliotecas JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script> <!-- Tradução do calendário -->
+    <script src="https://unpkg.com/imask"></script> <!-- Máscara de formulário -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Gráficos -->
+
+    <!-- Firebase e nosso script principal -->
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
