--- a/pages/home.html
+++ b/pages/home.html
@@ -1,14 +1,16 @@
-<!-- Hero Section -->
-<section class="hero-section text-white text-center py-32 px-6">
-    <h1 class="text-5xl md:text-6xl font-brand mb-4">A Arte da Barbearia Tradicional</h1>
-    <p class="text-lg text-gray-300 max-w-2xl mx-auto mb-8">Onde cada corte é uma obra-prima. Estilo, precisão e uma experiência única.</p>
-    <button class="bg-amber-500 text-gray-900 font-bold py-3 px-8 rounded-lg text-xl hover:bg-amber-600 transition duration-300" data-page="schedule">
-        Agende seu Horário Agora
-    </button>
+<!-- Nova Seção Principal com Imagem de Fundo -->
+<section class="container mx-auto px-6 pt-10 pb-20">
+    <div class="bg-cover bg-center rounded-lg shadow-lg p-16 md:p-24 text-center text-white flex flex-col items-center justify-center" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1599338263253-06d9a489133c?q=80&w=2070&auto=format&fit=crop'); min-height: 500px;">
+        <h1 class="text-5xl md:text-6xl font-brand mb-4">A Arte da Barbearia Tradicional</h1>
+        <p class="text-lg text-gray-300 max-w-2xl mx-auto mb-8">Onde cada corte é uma obra-prima. Estilo, precisão e uma experiência única.</p>
+        <button class="bg-amber-500 text-gray-900 font-bold py-3 px-8 rounded-lg text-xl hover:bg-amber-600 transition duration-300" data-page="schedule">
+            Agende seu Horário Agora
+        </button>
+    </div>
 </section>
 
 <!-- Services Section -->
-<section class="container mx-auto px-6 py-20">
+<section class="container mx-auto px-6 pb-20">
     <h2 class="text-4xl font-brand text-center mb-12">Nossos Serviços</h2>
     <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-gray-800 p-8 rounded-lg text-center border border-gray-700">
